# ws

./: package-lock.json  package.json
.github/workflows/: release.yaml
src/: App.tsx  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
