[package]
name = "ws"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ws_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-notification = "2.0.0-beta.8"

[profile.release]
panic = "abort" # skip cleanup logic in production when panic
codegen-units = 1 # may increase build time, but reduce binary size -- if build gets too long
lto = true # enable link-time optimization
opt-level = "s" # optimize for binary size -- first to check

strip = true #  strip symbols from the binary

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.8"
